--- a/consultoria.html
+++ b/consultoria.html
@@ -544,12 +544,14 @@
       letter-spacing: -0.02em;
       margin: 0 0 14px;
       line-height: 1.05;
+      text-align: center;
     }
     .glass-card p{
       margin: 0 0 18px;
       color: rgba(163,166,165,.90);
       line-height: 1.7;
       font-size: 14px;
+      text-align: center;
     }
 
     /* Bloque media */
@@ -609,24 +611,28 @@
     .bullets{
       list-style: none;
       padding: 0;
-      margin: 18px 0 0;
+      margin: 18px auto 0;
       display: grid;
       gap: 14px;
+      max-width: 64ch;
+      text-align: center;
     }
     .bullets li{
       display: flex;
       gap: 12px;
-      align-items: flex-start;
+      align-items: center;
+      justify-content: center;
       color: rgba(163,166,165,.92);
       line-height: 1.65;
       font-size: 14px;
+      text-align: center;
     }
     .bullets li:before{
       content: "";
       width: 8px;
       height: 8px;
       border-radius: 3px;
-      margin-top: 6px;
+      margin-top: 0;
       background: linear-gradient(135deg, var(--teal), var(--wine));
       box-shadow: 0 0 0 4px rgba(18,77,68,.12);
       flex: 0 0 auto;
@@ -845,7 +851,7 @@
       .glass-card{ padding: 24px 20px; }
       .glass-card h2{ font-size: clamp(24px, 6vw, 40px); }
       .glass-card p{ font-size: 13px; }
-      .bullets{ gap: 12px; }
+      .bullets{ gap: 12px; max-width: 100%; }
       .bullets li{ font-size: 13px; }
       .stats{ grid-template-columns: 1fr; }
       .two-col{ grid-template-columns: 1fr; }
