--- a/consultoria.html
+++ b/consultoria.html
@@ -538,11 +538,6 @@
       padding: 32px;
       margin-top: 18px;
     }
-    .glass-card{
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
     .glass-card h2{
       font-size: clamp(24px, 3vw, 40px);
       font-weight: 900;
@@ -550,7 +545,6 @@
       margin: 0 0 14px;
       line-height: 1.05;
       text-align: center;
-      width: 100%;
     }
     .glass-card p{
       margin: 0 0 18px;
@@ -558,7 +552,6 @@
       line-height: 1.7;
       font-size: 14px;
       text-align: center;
-      width: 100%;
     }
 
     /* Bloque media */
@@ -622,23 +615,24 @@
       display: grid;
       gap: 14px;
       max-width: 64ch;
-      width: 100%;
+      text-align: center;
     }
     .bullets li{
       display: flex;
       gap: 12px;
-      align-items: flex-start;
+      align-items: center;
+      justify-content: center;
       color: rgba(163,166,165,.92);
       line-height: 1.65;
       font-size: 14px;
-      text-align: left;
+      text-align: center;
     }
     .bullets li:before{
       content: "";
       width: 8px;
       height: 8px;
       border-radius: 3px;
-      margin-top: 6px;
+      margin-top: 0;
       background: linear-gradient(135deg, var(--teal), var(--wine));
       box-shadow: 0 0 0 4px rgba(18,77,68,.12);
       flex: 0 0 auto;
