Eliminar texto del brand y aumentar tamaño del logo a 120px

--- a/consultoria.html
+++ b/consultoria.html
@@ -107,11 +107,11 @@
       display:flex;
       align-items:center;
       gap: 12px;
-      min-width: 210px;
+      min-width: auto;
     }
     .logo{
-      width: 34px;
-      height: 34px;
+      width: 120px;
+      height: auto;
       border-radius: 12px;
       object-fit: contain;
       display: block;
@@ -734,8 +734,8 @@
       gap: 10px;
     }
     .footer-brand .logo{
-      width: 30px;
-      height: 30px;
+      width: 100px;
+      height: auto;
       border-radius: 11px;
       object-fit: contain;
     }
@@ -863,7 +863,7 @@
 
     @media (max-width: 480px){
       .nav{ padding: 10px 12px; }
-      .logo{ width: 28px; height: 28px; }
+      .logo{ width: 90px; height: auto; }
       .brand b{ font-size: 13px; }
       .icon-pill{ width: 32px; height: 32px; }
       .icon-pill svg{ width: 16px; height: 16px; }
@@ -894,7 +894,6 @@
       <nav class="nav" aria-label="Navegación principal">
         <a class="brand" href="index.html" aria-label="Inicio Elvira Strategy">
           <img src="assets/Logo/Elvira Strategy .png" alt="Elvira Strategy" class="logo" />
-          <div><b>Elvira Strategy</b></div>
         </a>
 
         <div class="nav-links">
@@ -1182,7 +1181,6 @@
         <div class="footer-left">
           <div class="footer-brand">
             <img src="assets/Logo/Elvira Strategy .png" alt="Elvira Strategy" class="logo" />
-            <div><b>Elvira Strategy</b></div>
           </div>
           <p class="footer-copy">
             Estrategia real, ejecución fina. Claridad, estructura y seguimiento para que lo importante
