--- a/cursos.html
+++ b/cursos.html
@@ -109,11 +109,11 @@
       display:flex;
       align-items:center;
       gap: 12px;
-      min-width: 210px;
+      min-width: auto;
     }
     .logo{
-      width: 34px;
-      height: 34px;
+      width: 120px;
+      height: auto;
       border-radius: 12px;
       object-fit: contain;
       display: block;
@@ -700,8 +700,8 @@
       gap: 10px;
     }
     .footer-brand .logo{
-      width: 30px;
-      height: 30px;
+      width: 100px;
+      height: auto;
       border-radius: 11px;
       object-fit: contain;
     }
@@ -791,6 +791,7 @@
       .nav-links{ display:none; }
       .hamburger{ display:inline-flex; align-items:center; justify-content:center; }
       .brand{ min-width: unset; }
+      .logo{ width: 90px; height: auto; }
       .nav-cta{ min-width: unset; gap: 8px; }
       .hero{ min-height: unset; padding: 40px 0 24px; }
       .hero-inner{ padding: 24px 0 0; }
@@ -820,7 +821,6 @@
       <nav class="nav" aria-label="Navegación principal">
         <a class="brand" href="index.html" aria-label="Inicio Elvira Strategy">
           <img src="assets/Logo/Elvira Strategy .png" alt="Elvira Strategy" class="logo" />
-          <div><b>Elvira Strategy</b></div>
         </a>
 
         <div class="nav-links">
@@ -1222,7 +1222,6 @@
         <div class="footer-left">
           <div class="footer-brand">
             <img src="assets/Logo/Elvira Strategy .png" alt="Elvira Strategy" class="logo" />
-            <div><b>Elvira Strategy</b></div>
           </div>
           <p class="footer-copy">
             Estrategia real, ejecución fina. Claridad, estructura y seguimiento para que lo importante
