Ajustar opacidad del overlay del hero para que la imagen Home.jpg sea más visible

--- a/index.html
+++ b/index.html
@@ -284,6 +284,8 @@
       justify-content:center;
       text-align:center;
       padding: 42px 0 0;
+      position: relative;
+      z-index: 2;
     }
     .kicker{
       display:inline-flex;
@@ -392,9 +394,9 @@
       background: rgba(254,251,249,.85);
     }
     
-    /* Overlay para hero con imagen - más sutil para que se vea la imagen */
+    /* Overlay para hero con imagen - muy sutil para que se vea bien la imagen */
     .hero .section-bg-overlay{
-      background: linear-gradient(180deg, rgba(254,251,249,.60), rgba(248,244,240,.75));
+      background: linear-gradient(180deg, rgba(254,251,249,.30), rgba(248,244,240,.40));
     }
 
     /* ===== QUIÉNES SOMOS ===== */
