Corregir ruta de imagen Home.jpg y asegurar que el fondo del hero se muestre correctamente

--- a/index.html
+++ b/index.html
@@ -997,7 +997,7 @@
 
   <header class="hero">
     <!-- Fondo del hero con imagen Home.jpg -->
-    <div class="section-bg section-bg-image" style="background-image: url('assets/Imagenes/Home.jpg');">
+    <div class="section-bg section-bg-image" style="background-image: url('./assets/Imagenes/Home.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat;">
       <div class="section-bg-overlay"></div>
     </div>
     <div class="wrap">
