--- a/index.html
+++ b/index.html
@@ -366,12 +366,15 @@
     }
     
     /* Estilos para fondos por sección */
-    section .section-bg{
+    section .section-bg,
+    .hero .section-bg{
       position: absolute;
       inset: 0;
       z-index: -1;
       pointer-events: none;
       overflow: hidden;
+      width: 100%;
+      height: 100%;
     }
     
     /* Ejemplos de fondos para secciones - Puedes usar estas clases en las secciones */
