Usar imagen Quienes somos.jpg en la sección Quiénes somos

--- a/index.html
+++ b/index.html
@@ -519,7 +519,7 @@
     }
     .who-photo{
       flex:1;
-      background-image: url("https://images.unsplash.com/photo-1521737604893-d14cc237f11d?auto=format&fit=crop&w=1600&q=70");
+      background-image: url("./assets/Imagenes/Quienes somos.jpg");
       background-size: cover;
       background-position: center;
       filter: saturate(0.9) contrast(1.05) brightness(1.05);
