Resaltar texto clave en negrita y color vino en la sección Quiénes somos

--- a/index.html
+++ b/index.html
@@ -1046,7 +1046,7 @@
 
             <p class="who-text">
               Elvira Strategy existe para ayudar a equipos a construir claridad:
-              qué se hace, quién lo hace, cómo se sostiene y cómo se mide.
+              <strong style="color: var(--wine); font-weight: 600;">qué se hace, quién lo hace, cómo se sostiene y cómo se mide.</strong>
               Nuestro foco es crear estructura útil para decisiones reales (no PDFs bonitos).
             </p>
 
