Actualizar todos los textos con los copys oficiales del documento PDF

--- a/consultoria.html
+++ b/consultoria.html
@@ -1088,7 +1088,7 @@
           <h1>CONSULTORÍA</h1>
 
           <p class="sub">
-            Acompañamiento para bajar DEI y ODS a tierra: claridad, estructura y seguimiento.
+            Consultoría técnica especializada para fortalecer políticas, protocolos, cultura organizacional e impacto social, con enfoque de derechos humanos, igualdad e inclusión. Cada proceso se diseña de manera confidencial, contextualizada y basada en evidencia, priorizando soluciones claras, viables y sostenibles para la organización.
           </p>
 
           <div class="hero-actions">
@@ -1165,10 +1165,10 @@
     <div class="wrap">
       <div class="section-head">
         <div>
-          <div class="badge"><span class="dot" aria-hidden="true"></span> LO QUE HACEMOS</div>
-          <div class="section-title">Estructura que se entiende y se ejecuta.</div>
+          <div class="badge"><span class="dot" aria-hidden="true"></span> LÍNEAS DE CONSULTORÍA</div>
+          <div class="section-title">Líneas de consultoría</div>
           <p class="section-desc">
-            No se trata de “sonar bien”. Se trata de definir, implementar y medir para sostener resultados.
+            Ofrecemos consultoría especializada en políticas, marcos institucionales, normas y cumplimiento, enfoque estratégico y transformación cultural, y alineación con sostenibilidad y ESG.
           </p>
         </div>
 
@@ -1195,10 +1195,12 @@
       </div>
 
       <div class="glass-card">
-        <h2>Marketing con intención (sin perder estructura).</h2>
+        <h2>Nuestro enfoque fortalece</h2>
         <p>
-          Acompañamos para que DEI y ODS no se queden en intención: se convierten en políticas, prácticas,
-          formación y métricas. En orden, con responsables, tiempos y seguimiento.
+          La cultura organizacional y el clima laboral, el cumplimiento normativo y la prevención de riesgos, y el impacto social positivo en comunidades y grupos de interés vinculados a las organizaciones.
+        </p>
+        <p style="margin-top: 16px; font-style: italic;">
+          Creemos que cuando una persona transforma su mirada, esa transformación se multiplica en su equipo, su organización y su comunidad.
         </p>
       </div>
     </div>
@@ -1239,10 +1241,10 @@
     <div class="wrap">
       <div class="section-head">
         <div>
-          <div class="badge"><span class="dot" aria-hidden="true"></span> POR QUÉ</div>
-          <div class="section-title">Impacto real, no solo discurso.</div>
+          <div class="badge"><span class="dot" aria-hidden="true"></span> NUESTRA PROPUESTA DE VALOR</div>
+          <div class="section-title">Nuestra propuesta de valor</div>
           <p class="section-desc">
-            Convertimos intención en operación: claridad, estructura y seguimiento para sostener resultados.
+            Ofrecemos servicios profesionales realizados con pasión y propósito, con rigurosidad técnica y alineación normativa.
           </p>
         </div>
       </div>
