--- a/cursos.html
+++ b/cursos.html
@@ -1046,7 +1046,7 @@
           <h1>CURSOS</h1>
 
           <p class="sub">
-            Formación para equipos: lenguaje común, herramientas y implementación.
+            Formación estratégica para organizaciones y comunidades — presencial, en línea o híbrida. Diseñamos programas de capacitación a la medida, alineados al sector, a los objetivos institucionales, al contexto sociocultural y a estándares nacionales e internacionales.
           </p>
 
           <div class="hero-actions">
@@ -1071,10 +1071,10 @@
     <div class="wrap">
       <div class="section-head">
         <div>
-          <div class="badge"><span class="dot" aria-hidden="true"></span> COMPRAR</div>
-          <div class="section-title">Elige el formato que necesita tu equipo</div>
+          <div class="badge"><span class="dot" aria-hidden="true"></span> CURSOS</div>
+          <div class="section-title">Solicita tu programa personalizado</div>
           <p class="section-desc">
-            Tres opciones para avanzar con claridad: desde fundamentos hasta implementación con seguimiento.
+            Diseñamos rutas de formación a la medida, con base en las necesidades y objetivos de tu organización. También contamos con cursos abiertos al público.
           </p>
         </div>
       </div>
