--- a/index.html
+++ b/index.html
@@ -1014,8 +1014,7 @@
           <h1>ELVIRA<br/>STRATEGY</h1>
 
           <p class="sub">
-            Construimos claridad y estructura para que DEI y ODS bajen a tierra:
-            decisiones que se entienden, se ejecutan y se miden.
+            Acompañamos a empresas, organizaciones y comunidades a construir espacios más inclusivos, seguros y dignos — dentro y fuera del trabajo. Lo hacemos a través de capacitación estratégica, consultoría técnica especializada y procesos de sensibilización con impacto organizacional y social.
           </p>
 
           <div class="hero-actions">
@@ -1042,12 +1041,16 @@
           <div class="who-left">
             <div class="who-kicker"><span class="who-dot"></span> QUIÉNES SOMOS</div>
 
-            <h2 class="who-title">Estrategia que baja a tierra.</h2>
+            <h2 class="who-title">¿Quiénes somos?</h2>
 
             <p class="who-text">
-              Elvira Strategy existe para ayudar a equipos a construir claridad:
-              <strong style="color: var(--wine); font-weight: 600;">qué se hace, quién lo hace, cómo se sostiene y cómo se mide.</strong>
-              Nuestro foco es crear estructura útil para decisiones reales (no PDFs bonitos).
+              Elvira Strategy es una consultoría especializada en derechos humanos, diversidad, equidad e inclusión (DEI), transformación cultural, ética organizacional y sostenibilidad, con experiencia nacional e internacional en sectores público, privado, académico y social.
+            </p>
+            <p class="who-text">
+              Nuestro trabajo combina rigurosidad técnica y visión estratégica — con verdadera pasión por lo que hacemos.
+            </p>
+            <p class="who-text">
+              Esa combinación nos permite generar soluciones sólidas, sensibles al contexto y con impacto real — alineadas a los objetivos organizacionales y al cumplimiento de estándares nacionales e internacionales.
             </p>
 
             <div class="who-list">
@@ -1091,11 +1094,10 @@
     <div class="wrap">
       <div class="section-head">
         <div>
-          <div class="badge"><span class="dot" aria-hidden="true"></span> NUESTRO ENFOQUE</div>
-          <div class="section-title">De la intención a la ejecución.</div>
+          <div class="badge"><span class="dot" aria-hidden="true"></span> QUÉ HACEMOS</div>
+          <div class="section-title">Qué hacemos</div>
           <p class="section-desc">
-            En Inicio no buscamos venderte: buscamos que entiendas cómo pensamos y cómo trabajamos.
-            Este es el camino base que usamos para convertir estrategia en resultados sostenibles.
+            Trabajamos junto con áreas de Recursos Humanos y Desarrollo Organizacional, Diversidad, Equidad e Inclusión (DEI), Sostenibilidad / ESG, Cumplimiento y Gobierno Corporativo, Responsabilidad Social, Community Engagement y Relación con Comunidades.
           </p>
         </div>
 
@@ -1114,15 +1116,15 @@
                 <div class="service-tag"><span class="dot" aria-hidden="true"></span> claridad</div>
               </div>
 
-              <h3 class="service-title">Diagnóstico con evidencia</h3>
+              <h3 class="service-title">Programas de capacitación y sensibilización</h3>
               <p class="service-text">
-                Contexto, riesgos, brechas y prioridades. Definimos qué mover primero y qué medir desde el día uno.
+                Diseñamos programas de capacitación y sensibilización estratégicos para organizaciones y comunidades.
               </p>
 
               <div class="chip-row">
-                <span class="chip">Mapa de riesgos</span>
-                <span class="chip">Brechas y oportunidades</span>
-                <span class="chip wine">Roadmap base</span>
+                <span class="chip">Capacitación</span>
+                <span class="chip">Sensibilización</span>
+                <span class="chip wine">Impacto organizacional</span>
               </div>
             </div>
 
@@ -1146,15 +1148,15 @@
                 <div class="service-tag wine"><span class="dot" aria-hidden="true"></span> estructura</div>
               </div>
 
-              <h3 class="service-title">Implementación práctica</h3>
+              <h3 class="service-title">Políticas, protocolos y marcos institucionales</h3>
               <p class="service-text">
-                Políticas, procesos, capacitación y responsables claros. Lo que se escribe se ejecuta, y lo que se ejecuta se sostiene.
+                Diseñamos e implementamos políticas, protocolos y marcos institucionales con enfoque de derechos humanos e inclusión.
               </p>
 
               <div class="chip-row">
-                <span class="chip">Protocolos</span>
-                <span class="chip wine">Capacitación</span>
-                <span class="chip">Acompañamiento</span>
+                <span class="chip">Políticas</span>
+                <span class="chip wine">Protocolos</span>
+                <span class="chip">Marcos institucionales</span>
               </div>
             </div>
 
@@ -1178,15 +1180,15 @@
                 <div class="service-tag"><span class="dot" aria-hidden="true"></span> medición</div>
               </div>
 
-              <h3 class="service-title">Indicadores y seguimiento</h3>
+              <h3 class="service-title">Estrategias de inclusión, igualdad y prevención de violencias</h3>
               <p class="service-text">
-                Métricas claras, reportes ejecutivos y ajustes continuos. Lo importante: que se sostenga, no que “se vea bonito”.
+                Desarrollamos estrategias de inclusión, igualdad y prevención de violencias, así como procesos comunitarios con enfoque de derechos humanos, igualdad y no discriminación.
               </p>
 
               <div class="chip-row">
-                <span class="chip wine">KPIs</span>
-                <span class="chip">Reportes</span>
-                <span class="chip">Mejora continua</span>
+                <span class="chip wine">Inclusión</span>
+                <span class="chip">Igualdad</span>
+                <span class="chip">Prevención de violencias</span>
               </div>
             </div>
 
