Actualizar propuesta de valor en consultoria.html con textos oficiales

--- a/consultoria.html
+++ b/consultoria.html
@@ -1251,11 +1251,14 @@
 
       <div class="two-col">
         <div class="glass-card">
-          <h2>Lo que sí hacemos</h2>
+          <h2>Nuestra propuesta de valor</h2>
           <ul class="bullets">
-            <li>Research/diagnóstico para decisiones rápidas y bien informadas</li>
-            <li>Estructura accionable: responsables, tiempos, entregables</li>
-            <li>Seguimiento: indicadores, reportes y mejora continua</li>
+            <li>☑ Rigurosidad técnica y alineación normativa</li>
+            <li>☑ Enfoque estratégico transversal</li>
+            <li>☑ Implementación práctica y contextualizada</li>
+            <li>☑ Trabajo colaborativo e interdisciplinario</li>
+            <li>☑ Impacto organizacional y comunitario</li>
+            <li>☑ Servicio profesional realizado con pasión y propósito</li>
           </ul>
         </div>
 
