Ajustar posicionamiento de imagen Hero_cursos.jpg para evitar que se corte

--- a/cursos.html
+++ b/cursos.html
@@ -265,11 +265,12 @@
     /* HERO (SE QUEDA IGUAL) */
     .hero{
       padding: 66px 0 36px;
-      min-height: calc(78vh - 120px);
+      min-height: calc(85vh - 120px);
       display:flex;
       align-items:center;
       position: relative;
       z-index: 1;
+      overflow: hidden;
     }
     .hero-inner{
       display:flex;
@@ -1052,7 +1053,7 @@
   <!-- HERO (sin cambios) -->
   <header class="hero">
     <!-- Fondo del hero con imagen Hero_cursos.jpg -->
-    <div class="section-bg section-bg-image" style="background-image: url('./assets/Imagenes/Hero_cursos.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat;">
+    <div class="section-bg section-bg-image" style="background-image: url('./assets/Imagenes/Hero_cursos.jpg'); background-size: cover; background-position: 60% center; background-repeat: no-repeat;">
       <div class="section-bg-overlay"></div>
     </div>
     <div class="wrap">
