Agregar estilos específicos para mejor posicionamiento de imagen en hero de cursos

--- a/cursos.html
+++ b/cursos.html
@@ -391,6 +391,17 @@
       background-position: center;
       background-repeat: no-repeat;
     }
+    
+    /* Ajuste específico para hero de cursos */
+    .hero .section-bg-image{
+      background-position: 60% center;
+    }
+    
+    @media (max-width: 768px){
+      .hero .section-bg-image{
+        background-position: 50% center;
+      }
+    }
     .section-bg-overlay{
       position: absolute;
       inset: 0;
