Ajustar hero para que la imagen llegue hasta arriba sin franja gris

--- a/cursos.html
+++ b/cursos.html
@@ -264,8 +264,10 @@
 
     /* HERO (SE QUEDA IGUAL) */
     .hero{
-      padding: 66px 0 36px;
-      min-height: calc(85vh - 120px);
+      padding: 0 0 36px;
+      margin-top: -120px;
+      padding-top: 120px;
+      min-height: 100vh;
       display:flex;
       align-items:center;
       position: relative;
