--- a/cursos.html
+++ b/cursos.html
@@ -365,7 +365,10 @@
     section .section-bg,
     .hero .section-bg{
       position: absolute;
-      inset: 0;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
       z-index: -1;
       pointer-events: none;
       overflow: hidden;
