--- a/consultoria.html
+++ b/consultoria.html
@@ -418,6 +418,11 @@
       text-shadow: 0 2px 10px rgba(0,0,0,.25), 0 1px 3px rgba(0,0,0,.15);
     }
     
+    /* Texto blanco para el sub en el hero de consultoría */
+    .hero .sub{
+      color: rgba(255,255,255,.95);
+    }
+    
     /* Botones con fondo más sólido para mejor visibilidad */
     .hero .btn{
       box-shadow: 0 4px 15px rgba(0,0,0,.20);
