Agregar imagen 'Lineas de consultoria.jpg' como fondo de la sección Líneas de consultoría

--- a/consultoria.html
+++ b/consultoria.html
@@ -1197,8 +1197,10 @@
 
   <!-- BLOQUE "LO QUE HACEMOS" (sin 3/2/1 abajo) -->
   <section id="trust">
-    <!-- Fondo de sección - Puedes cambiar el estilo aquí -->
-    <div class="section-bg section-bg-color"></div>
+    <!-- Fondo de sección - Imagen de líneas de consultoría -->
+    <div class="section-bg section-bg-image" style="background-image: url('./assets/Imagenes/Lineas de consultoria.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat;">
+      <div class="section-bg-overlay"></div>
+    </div>
     <div class="wrap">
       <div class="section-head">
         <div>
