Ajustar overlay de sección Líneas de consultoría para que la imagen sea más visible

--- a/consultoria.html
+++ b/consultoria.html
@@ -406,6 +406,11 @@
       background: rgba(254,251,249,.85);
     }
     
+    /* Overlay más sutil para secciones con imagen de fondo */
+    #trust .section-bg-overlay{
+      background: rgba(254,251,249,.50);
+    }
+    
     /* Overlay para hero con imagen - gradiente suave para mejor legibilidad */
     .hero .section-bg-overlay{
       background: linear-gradient(180deg, rgba(0,0,0,.12) 0%, rgba(254,251,249,.20) 40%, rgba(248,244,240,.25) 100%);
