--- a/consultoria.html
+++ b/consultoria.html
@@ -721,10 +721,15 @@
     .media{
       position: relative;
       min-height: 320px;
-      background-image: url("https://images.unsplash.com/photo-1522071820081-009f0129c71c?auto=format&fit=crop&w=1800&q=70");
+      background-image: url('./assets/Imagenes/Lineas de consultoria.jpg');
       background-size: cover;
       background-position: center;
       filter: saturate(0.9) contrast(1.05) brightness(1.05);
+    }
+    
+    /* Ocultar overlay y botón de play en la sección de líneas de consultoría */
+    #trust .media::after{
+      display: none;
     }
     .media::after{
       content:"";
@@ -1225,14 +1230,6 @@
       <div class="media-grid">
         <div class="media-card">
           <div class="media" aria-hidden="true">
-            <div class="play">
-              <div class="play-btn" title="Bloque visual (placeholder)">
-                <svg width="22" height="22" viewBox="0 0 24 24" fill="none" aria-hidden="true">
-                  <path d="M10 8.5v7l6-3.5-6-3.5Z" fill="currentColor"/>
-                  <path d="M12 22a10 10 0 1 0 0-20 10 10 0 0 0 0 20Z" stroke="currentColor" stroke-width="1.6" opacity=".65"/>
-                </svg>
-              </div>
-            </div>
           </div>
           <!-- ✅ Aquí ya NO va la franja 3/2/1 -->
         </div>
