Asegurar que la imagen Lineas de consultoria.jpg se muestre correctamente eliminando overlays que la ocultan

--- a/consultoria.html
+++ b/consultoria.html
@@ -740,6 +740,11 @@
         linear-gradient(180deg, rgba(245,243,240,.20), rgba(237,234,229,.40));
       pointer-events:none;
     }
+    
+    /* Ocultar overlay en la sección de líneas de consultoría */
+    #trust .media::after{
+      display: none;
+    }
     .play{
       position:absolute;
       inset:0;
