--- a/consultoria.html
+++ b/consultoria.html
@@ -1228,7 +1228,7 @@
 
       <div class="media-grid">
         <div class="media-card">
-          <div class="media" aria-hidden="true">
+          <div class="media" style="background-image: url('./assets/Imagenes/Lineas de consultoria.jpg');" aria-hidden="true">
           </div>
           <!-- ✅ Aquí ya NO va la franja 3/2/1 -->
         </div>
