Codificar espacio en el nombre del archivo en la URL de la imagen

--- a/consultoria.html
+++ b/consultoria.html
@@ -729,7 +729,7 @@
     
     /* Imagen específica para la sección de líneas de consultoría */
     #trust .media{
-      background-image: url('./assets/Imagenes/Lineas de consultoria.jpg');
+      background-image: url('./assets/Imagenes/Lineas%20de%20consultoria.jpg');
       min-height: 400px;
     }
     
@@ -1234,7 +1234,7 @@
 
       <div class="media-grid">
         <div class="media-card">
-          <div class="media" style="background-image: url('assets/Imagenes/Lineas de consultoria.jpg'); background-size: cover; background-position: center; min-height: 400px;" aria-hidden="true">
+          <div class="media" style="background-image: url('./assets/Imagenes/Lineas%20de%20consultoria.jpg'); background-size: cover; background-position: center; min-height: 400px;" aria-hidden="true">
           </div>
           <!-- ✅ Aquí ya NO va la franja 3/2/1 -->
         </div>
