Mejorar diseño visual: agregar elementos decorativos a heroes y mejorar presentación de secciones

--- a/consultoria.html
+++ b/consultoria.html
@@ -1142,6 +1142,18 @@
           <p class="sub" style="margin-top: 12px;">
             Cada proceso se diseña de manera confidencial, contextualizada y basada en evidencia, priorizando soluciones claras, viables y sostenibles para la organización.
           </p>
+
+          <div class="hero-actions">
+            <a class="btn primary" href="https://wa.link/4wxidx" target="_blank" rel="noopener">Agendar consultoría</a>
+            <a class="btn wine" href="#trust">Ver líneas de consultoría</a>
+          </div>
+
+          <div class="pill-row">
+            <span class="mini-pill">Confidencial</span>
+            <span class="mini-pill wine">Contextualizada</span>
+            <span class="mini-pill">Basada en evidencia</span>
+            <span class="mini-pill wine">Sostenible</span>
+          </div>
         </div>
       </div>
     </div>
