--- a/cursos.html
+++ b/cursos.html
@@ -1077,6 +1077,18 @@
           <p class="sub" style="margin-top: 12px;">
             Diseñamos programas de capacitación a la medida, alineados al sector, a los objetivos institucionales, al contexto sociocultural y a estándares nacionales e internacionales.
           </p>
+
+          <div class="hero-actions">
+            <a class="btn primary" href="https://wa.link/axdqt6" target="_blank" rel="noopener">Solicitar programa personalizado</a>
+            <a class="btn wine" href="#lineas">Ver líneas de capacitación</a>
+          </div>
+
+          <div class="pill-row">
+            <span class="mini-pill">Presencial</span>
+            <span class="mini-pill wine">En línea</span>
+            <span class="mini-pill">Híbrida</span>
+            <span class="mini-pill wine">A la medida</span>
+          </div>
         </div>
       </div>
     </div>
