--- a/index.html
+++ b/index.html
@@ -1019,6 +1019,18 @@
           <p class="sub" style="margin-top: 12px;">
             Lo hacemos a través de capacitación estratégica, consultoría técnica especializada y procesos de sensibilización con impacto organizacional y social.
           </p>
+
+          <div class="hero-actions">
+            <a class="btn primary" href="consultoria.html">Consultoría</a>
+            <a class="btn wine" href="cursos.html">Cursos</a>
+          </div>
+
+          <div class="pill-row">
+            <span class="mini-pill">DEI</span>
+            <span class="mini-pill wine">Derechos Humanos</span>
+            <span class="mini-pill">Transformación Cultural</span>
+            <span class="mini-pill wine">ESG</span>
+          </div>
         </div>
       </div>
     </div>
@@ -1058,14 +1070,20 @@
     <!-- Fondo de sección - Puedes cambiar el estilo aquí -->
     <div class="section-bg section-bg-color"></div>
     <div class="wrap">
-          <div class="section-head">
+      <div class="section-head">
         <div>
           <div class="badge"><span class="dot" aria-hidden="true"></span> QUÉ HACEMOS</div>
           <div class="section-title">Qué hacemos</div>
           <p class="section-desc">
             Trabajamos junto con áreas de:
           </p>
-          <ul style="margin: 12px 0; padding-left: 20px; color: rgba(45,45,45,.70); line-height: 1.85; font-size: 15px;">
+        </div>
+      </div>
+
+      <div class="two-col" style="margin-top: 24px; gap: 20px;">
+        <div class="glass-card">
+          <h3 style="margin: 0 0 16px; font-size: 18px; font-weight: 600; color: var(--wine);">Trabajamos junto con áreas de:</h3>
+          <ul style="margin: 0; padding-left: 20px; color: rgba(45,45,45,.70); line-height: 1.85; font-size: 15px;">
             <li>Recursos Humanos y Desarrollo Organizacional</li>
             <li>Diversidad, Equidad e Inclusión (DEI)</li>
             <li>Sostenibilidad / ESG</li>
@@ -1073,29 +1091,31 @@
             <li>Responsabilidad Social</li>
             <li>Community Engagement y Relación con Comunidades</li>
           </ul>
-          <p class="section-desc" style="margin-top: 12px;">
-            Para diseñar e implementar:
-          </p>
-          <ul style="margin: 12px 0; padding-left: 20px; color: rgba(45,45,45,.70); line-height: 1.85; font-size: 15px;">
+        </div>
+
+        <div class="glass-card">
+          <h3 style="margin: 0 0 16px; font-size: 18px; font-weight: 600; color: var(--wine);">Para diseñar e implementar:</h3>
+          <ul style="margin: 0; padding-left: 20px; color: rgba(45,45,45,.70); line-height: 1.85; font-size: 15px;">
             <li>Programas de capacitación y sensibilización</li>
             <li>Políticas, protocolos y marcos institucionales</li>
             <li>Estrategias de inclusión, igualdad y prevención de violencias</li>
             <li>Procesos comunitarios con enfoque de derechos humanos, igualdad y no discriminación</li>
           </ul>
-          <p class="section-desc" style="margin-top: 12px;">
-            Nuestro enfoque fortalece:
-          </p>
-          <ul style="margin: 12px 0; padding-left: 20px; color: rgba(45,45,45,.70); line-height: 1.85; font-size: 15px;">
-            <li>La cultura organizacional y el clima laboral</li>
-            <li>El cumplimiento normativo y la prevención de riesgos</li>
-            <li>El impacto social positivo en comunidades y grupos de interés vinculados a las organizaciones.</li>
-          </ul>
         </div>
+      </div>
 
-        <div class="section-actions">
-          <a class="btn ghost" href="consultoria.html">Ver consultoría completa</a>
-          <a class="btn primary" href="https://wa.link/i1v7h6" target="_blank" rel="noopener">Hablemos</a>
-        </div>
+      <div class="glass-card" style="margin-top: 20px;">
+        <h3 style="margin: 0 0 16px; font-size: 18px; font-weight: 600; color: var(--wine);">Nuestro enfoque fortalece:</h3>
+        <ul style="margin: 0; padding-left: 20px; color: rgba(45,45,45,.70); line-height: 1.85; font-size: 15px;">
+          <li>La cultura organizacional y el clima laboral</li>
+          <li>El cumplimiento normativo y la prevención de riesgos</li>
+          <li>El impacto social positivo en comunidades y grupos de interés vinculados a las organizaciones.</li>
+        </ul>
+      </div>
+
+      <div class="section-actions" style="margin-top: 24px;">
+        <a class="btn ghost" href="consultoria.html">Ver consultoría completa</a>
+        <a class="btn primary" href="https://wa.link/i1v7h6" target="_blank" rel="noopener">Hablemos</a>
       </div>
 
       <!-- MENSAJE DE CIERRE / VISIÓN -->
